microservices/scenarios/k8s/deployment.yaml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: scenarios
    version: 1.0.0
  name: scenarios
spec:
  replicas: 1
  selector:
    app: scenarios
    deploymentconfig: scenarios
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: scenarios
        version: 1.0.0
        deploymentconfig: scenarios
    spec:
      serviceAccountName: scenarios
      containers:
      - image: scenarios
        name: scenarios
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - scenarios
      from:
        kind: ImageStreamTag
        name: scenarios:latest
    type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scenarios
    version: 1.0.0
  name: scenarios
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: scenarios
    deploymentconfig: scenarios
---
apiVersion: v1
kind: Route
metadata:
  labels:
    expose: "true"
    group: com.redhat.cloudnative
    version: 1.0.0
    app: scenarios
  name: scenarios
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: scenarios
